--- a/chat-application/client/src/components/Register/Register.css
+++ b/chat-application/client/src/components/Register/Register.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -13,67 +13,17 @@ body {
   box-sizing: border-box;
 }
 
-.wave {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  z-index: -1;
-}
-
-.wave2 {
-  position: fixed;
-  top: 0;
-  right:0;
-  height: 100%;
-  z-index: -1;
-}
-
-
-.wave3 {
-  position: fixed;
-  bottom: 0-5px;
-  right:0;
-  height: 100%;
-  z-index: -1;
-
-}
-
-.wave4 {
-  position: fixed;
-  bottom: 100px;
-  left: 0;
-  height: 100%;
-  z-index: -1;
-}
-
-.containerImage {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 7rem;
-  padding: 0 2rem;
-}
-
-.img {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
 .joinOuterContainer {
   display: flex;
   justify-content: center;
-  width: 215%;
-  height: 90vh;
+  text-align: center;
+  height: 100vh;
   align-items: center;
-  background-color: #ffffff00;
+  background-color: #1a1a1d;
 }
 
 .joinInnerContainer {
   width: 20%;
-  /*padding: 5000px;*/
 }
 
 .joinInput {
@@ -82,37 +32,27 @@ body {
   width: 100%;
 }
 
-.joinInnerContainer h1 {
-  margin: 35px 0;
-  text-align: center;
-  color: #333;
-  text-transform: uppercase;
-  font-size: 2.9rem;
+.heading {
+  color: white;
+  font-size: 2.5em;
+  padding-bottom: 10px;
+  border-bottom: 2px solid white;
 }
 .heading2 {
-  color: #333;
-  font-size: 1.3rem;
-  text-align: left;
-  padding-left: 10px;
+  color: white;
   /* padding-bottom: 10px; */
 }
 
-.btn {
-  display: block;
-  width: 100%;
-  height: 50px;
-  border-radius: 25px;
-  outline: none;
-  border: none;
-  background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-  background-size: 200%;
-  font-size: 1.7rem;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
+.button {
+  color: #fff !important;
   text-transform: uppercase;
-  margin: 1rem 0;
-  cursor: pointer;
-  transition: 0.5s;
+  text-decoration: none;
+  background: #2979ff;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  width: 100%;
 }
 
 .mt-20 {
