Mini Project Corrections

--- a/chat-application/client/src/components/Profile/Profile.css
+++ b/chat-application/client/src/components/Profile/Profile.css
@@ -42,7 +42,7 @@ body {
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #007bff;
+  background: #38d39f;
   padding: 20px;
   border-radius: 5px;
   display: inline-block;
